--- a/package.json
+++ b/package.json
@@ -14,13 +14,21 @@
     "babel-core": "^6.26.3",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
     "gulp-rename": "^1.2.3",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-webserver": "^0.9.1",
+    "lodash": "^4.17.10",
     "rollup": "^0.59.1",
     "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-uglify": "^4.0.0"
+  },
+  "dependencies": {
+    "@fdaciuk/ajax": "^2.3.0",
+    "axios": "^0.18.0"
   }
 }
