--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,13 @@
 {
     "presets": [
-      [
-        "env",
-        {
-          "modules": false
-        }
-      ]
+        [
+            "env",
+            {
+                "modules": false
+            }
+        ]
+    ],
+    "plugins": [
+        "transform-decorators-legacy"
     ]
-  }
+}
