--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
@@ -21,6 +22,8 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-webserver": "^0.9.1",
     "lodash": "^4.17.10",
+    "mocha": "^5.2.0",
+    "puppeteer": "^1.4.0",
     "rollup": "^0.59.1",
     "rollup-plugin-babel": "^3.0.4",
     "rollup-plugin-commonjs": "^9.1.3",
